# utterwise

./: README.md  USAGE.md  pyproject.toml
tests/: menu.py
tests/golden/: basic.json
tests/unit/: test_api.py  test_golden.py  test_math.py  test_package_polish.py  test_pipeline.py  test_robustness_fixes.py  test_rules.py  test_temperature.py
utterwise/: __init__.py  api.py  cli.py  config.py  tokens.py
utterwise/classifiers/: __init__.py  basic.py  rules.py
utterwise/detectors/: __init__.py  basic.py
utterwise/disambiguator/: __init__.py  context.py
utterwise/formatters/: __init__.py  plain.py  ssml.py
utterwise/math/: __init__.py  detect.py  fast_rules.py  latex.py  sympy_adapter.py  vocabulary.py
utterwise/normalizers/: __init__.py  core.py  preprocess.py
utterwise/policies/: __init__.py  base.py
utterwise/tokenizer/: __init__.py  basic.py
utterwise/utils/: __init__.py  currency.py
utterwise/verbalizers/: __init__.py  basic.py  numbers.py
