[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "utterwise"
version = "0.1.1"
description = "A lightweight, explainable semantic TTS normalizer for Python apps and voice-agent pipelines."
readme = "README.md"
requires-python = ">=3.10"

license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [{ name = "Vandal" }]

keywords = ["tts", "normalization", "ssml", "speech", "text-normalization"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Text Processing :: Linguistic",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
math = [
    "pylatexenc>=2.10",
    "sympy>=1.14.0",
]

[project.urls]
Homepage = "https://github.com/VandalByte/utterwise"
Repository = "https://github.com/VandalByte/utterwise"
Issues = "https://github.com/VandalByte/utterwise/issues"

[project.scripts]
utterwise = "utterwise.cli:main"

[tool.setuptools.packages.find]
include = ["utterwise*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
